[package]
name = "kvs"
version = "0.1.0"
authors = ["wat3rmelon <wat3rmelon@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive","cargo"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
